analysis/low-level-api-fir/testdata/lazyResolve/errors/anonymousObjectInInvalidPosition.kt
private val resolveMe: A = null = <expr>object : A<Int> {
    override fun x() {}
}</expr>

interface A<T> {
    fun x()
}
